<resources>
    <string name="app_name">BasicLab</string>

    <string name="action_settings">Settings</string>
    <string name="action_destruction">Destruction</string>
    <string name="action_osiemGwiazd">***** ***</string>
    <string name="action_second">Go to: Second</string>
    <string name="action_first">Go to: First</string>
    <string name="action_third">Go to: Third</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="third_fragment_label">Third Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment</string>
    <string name="hello_third_fragment">Hello third fragment</string>

</resources>