<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.basiclab.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_destruction"
        android:title="@string/action_destruction" />
    <item
        android:id="@+id/action_osiemGwiazd"
        android:title="@string/action_osiemGwiazd" />
    <item
        android:id="@+id/action_first"
        android:title="@string/action_first" />
    <item
        android:id="@+id/action_second"
        android:title="@string/action_second" />
    <item
        android:id="@+id/action_third"
        android:title="@string/action_third" />
</menu>